# GlassBoxML

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: generate_plots.py
experiments/decision_tree/: basic_dTree.py  benchmark_vs_sklearn.py  experiment3.py  run_scratch_decision_tree.py
experiments/knn/: Test_utils.ipynb  scratch.ipynb
experiments/linear_regression/: 1var_fit_on_artificial_data.py  dataset_generators.py  lambda_effect.py  linear_regression.py  multivar_fit_on_artificial_data.py  scratch_first_draft.ipynb
experiments/logistic_regression/: decision_boundary.py  loss_convergence.py
experiments/random_forest/: scratch.ipynb
glassboxml/data/: generators.py
glassboxml/distances/: distances.py
glassboxml/losses/: regularization.py
glassboxml/metrics/: regression.py
glassboxml/models/: decision_tree.py  knn.py  linear_regression.py  logistic_regression.py  main.py  random_forest.py
glassboxml/optimizers/: gradient_descent.py
k8s/: deployment.yaml  service.yaml
scripts/: build.sh  run.sh  test.sh
tests/: test_dataset_generators.py  test_linear_regression.py  test_logistic_regression.py  test_loss_convergence.py
tests/data/: test_dataset_generators.py
tests/losses/: test_regularization.py
tests/models/: test_decision_tree.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_random_forest.py
webapp/: app.py
webapp/static/: index.html
