[project]
name = "glassboxml"
version = "0.1.0"
dependencies = [
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
test = ["pytest", "scikit-learn"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["glassboxml*"]